<resources>
    <string name="app_name">Ricky and Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="unknown_error">Unkown Error</string>
    <string name="character_image">Character Image</string>
    <string name="character_name">Character Name</string>
    <string name="character_status">Character Status</string>
    <string name="character_species">Character Species</string>
    <string name="characters">Characters</string>
    <string name="character_detail">Character Detail</string>
    <string name="back_button">Back Button</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search...</string>
    <string name="favorite_title">Favorite</string>
    <string name="whoops_it_s_empty_here">Whoops... It\'s empty here.</string>
    <string name="loading">Loading...</string>
</resources>